group controller swagger
