# app/api/user.go
@@ -65,6 +65,7 @@ func signUp(userEntity repository.IUser) func(ctx *gin.Context) {
 }
 
 // GetAllUser godoc
+// @Tags UserController
 // @Summary Get all user
 // @Description Get all user
 // @Accept  json
